tdf#142913 PPTX: slideshow setting “Start from” not imported

Note: see Slide Show->Slide Show Settings...->Range->From:
on the UI, or press Shift-F5 after loading the unit test
document sd/qa/unit/data/pptx/tdf142913.pptx.

Change-Id: I2e10a4353c26600bf405475cb89990413c81dc1e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117705
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>